--- a/src/OnlineStore.WebAPI/appsettings.json
+++ b/src/OnlineStore.WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=Store;User Id=sa;password=Password123;Trusted_Connection=False;MultipleActiveResultSets=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
