Containerise the solution with Docker

--- a/src/OnlineStore.WebAPI/appsettings.DockerDev.json
+++ b/src/OnlineStore.WebAPI/appsettings.DockerDev.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=Store;User Id=sa;password=Password123;Trusted_Connection=False;MultipleActiveResultSets=true;"
+    "DefaultConnection": "Server=sqlserver;Database=Store;User Id=sa;password=Password123;Trusted_Connection=False;MultipleActiveResultSets=true;"
   },
   "Logging": {
     "LogLevel": {
